Fix: Bootstrap 4 integration was showing too much opacity
- Thread 42714

Sync to source repo @5205b001f9a03088c5065c328d7f71bc88ce2bf1

--- a/css/fixedColumns.bootstrap4.css
+++ b/css/fixedColumns.bootstrap4.css
@@ -42,3 +42,11 @@ div.DTFC_RightFootWrapper table {
   margin-top: 0 !important;
   background-color: white;
 }
+
+table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(odd) {
+  background-color: #F3F3F3;
+}
+
+table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(even) {
+  background-color: white;
+}
